--- a/epubreader/src/main/AndroidManifest.xml
+++ b/epubreader/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".example.ReadExampleActivity"/>
+
     </application>
 
 </manifest>
