--- a/epubreader/src/main/AndroidManifest.xml
+++ b/epubreader/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
 
         <activity
             android:name=".ui.splash.SplashActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
