--- a/epubreader/src/main/AndroidManifest.xml
+++ b/epubreader/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
 
         <activity android:name=".example.ReadExampleActivity"/>
 
+        <activity android:name=".ui.MainActivity"/>
+
     </application>
 
 </manifest>
