--- a/epubreader/build.gradle
+++ b/epubreader/build.gradle
@@ -56,8 +56,9 @@ android {
         jvmTarget = "1.8"
     }
 
-    dataBinding {
-        enabled = true
+    buildFeatures {
+        viewBinding = true
+        dataBinding = true
     }
 }
 
