--- a/epubreader/src/main/AndroidManifest.xml
+++ b/epubreader/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
 
         <activity android:name=".example.ReadExampleActivity"/>
 
-        <activity android:name=".ui.MainActivity"/>
+        <activity android:name=".ui.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
 
     </application>
 
